# videos

./: .gitattributes  .gitignore  .pylintrc  Cargo.toml  NOTES.md  README  README.md  pyproject.toml  requirements.txt
src/: main.rs
uniformity/: Cargo.toml  references.bib  script.tex
uniformity/media/audio/music/: mel0.aif  mel1.aif
uniformity/media/models/: CONTRIBUTIONS.md  modellist.json
uniformity/media/script/: Makefile  main.tex  script.tex
uniformity/src/: 8.tex  Doxyfile  Makefile  TODO  download.py  exceptions.py  file_specification.md  main.c  main.py  manim.cfg  polyhedra.py  tri.py  two.tex  uniformity.conf
uniformity/src/manim/: main.py
uniformity/src/manim/media/Tex/: 3b608a41deeecfa4.tex
uniformity/src/manim/media/videos/main/2160p60/partial_movie_files/TexExample/: partial_movie_file_list.txt
uniformity/src/models/: cube.off  main.c
uniformity/unity/.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
uniformity/unity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
uniformity/unity/ProjectSettings/: ProjectSettings.asset
uniformity/unity/UserSettings/Layouts/: default-6000.dwlt
