[project]
name = "videos"
version = "0.1.0"
description = ""
authors = [
    {name = "playfulmathematician",email = "me@playfulmathematician.com"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies] 
python = "^3.13" 
requests = "^2.31.0" 
beautifulsoup4 = "^4.12.2"